--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@th0rgal/ralph-wiggum",
-  "version": "1.2.1",
-  "description": "Ralph Wiggum technique for iterative AI development loops with multi-agent support",
+  "version": "2.0.0",
+  "description": "Ralph Wiggum technique for iterative AI development loops with OpenCode SDK",
   "main": "bin/ralph.js",
   "bin": {
     "ralph": "bin/ralph.js"
@@ -28,19 +28,15 @@
     "ralph-wiggum",
     "iterative-development",
     "automation",
-    "ai-agent",
     "coding-assistant",
     "llm",
-    "claude",
-    "claude-code",
-    "codex",
-    "gpt",
     "self-correcting",
     "autonomous",
     "developer-tools",
     "cli",
     "bun",
-    "typescript"
+    "typescript",
+    "sdk"
   ],
   "author": "Th0rgal",
   "license": "MIT",
@@ -52,6 +48,9 @@
     "url": "https://github.com/Th0rgal/ralph-wiggum/issues"
   },
   "homepage": "https://github.com/Th0rgal/ralph-wiggum#readme",
+  "dependencies": {
+    "@opencode-ai/sdk": "^0.x"
+  },
   "devDependencies": {
     "@types/bun": "^1.3.5"
   }
