--- a/package.json
+++ b/package.json
@@ -1,57 +1,57 @@
 {
-  "name": "@th0rgal/ralph-wiggum",
-  "version": "2.0.0",
-  "description": "Ralph Wiggum technique for iterative AI development loops with OpenCode SDK",
-  "main": "bin/ralph.js",
-  "bin": {
-    "ralph": "bin/ralph.js"
-  },
-  "scripts": {
-    "start": "bun ralph.ts",
-    "build": "bun build ralph.ts --outfile bin/ralph --compile",
-    "test": "bun test ./tests/ralph.test.ts",
-    "install-local": "bun link"
-  },
-  "files": [
-    "bin/ralph.js",
-    "ralph.ts",
-    "README.md",
-    "LICENSE",
-    "install.sh",
-    "install.ps1",
-    "uninstall.sh",
-    "uninstall.ps1"
-  ],
-  "keywords": [
-    "opencode",
-    "ai",
-    "ralph-wiggum",
-    "iterative-development",
-    "automation",
-    "coding-assistant",
-    "llm",
-    "self-correcting",
-    "autonomous",
-    "developer-tools",
-    "cli",
-    "bun",
-    "typescript",
-    "sdk"
-  ],
-  "author": "Th0rgal",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Th0rgal/ralph-wiggum.git"
-  },
-  "bugs": {
-    "url": "https://github.com/Th0rgal/ralph-wiggum/issues"
-  },
-  "homepage": "https://github.com/Th0rgal/ralph-wiggum#readme",
-  "dependencies": {
-    "@opencode-ai/sdk": "^0.x"
-  },
-  "devDependencies": {
-    "@types/bun": "^1.3.5"
-  }
+    "name": "@victorhsb/opencode-ralph",
+    "version": "2.0.0",
+    "description": "Ralph Wiggum technique for iterative AI development loops with OpenCode",
+    "main": "bin/ralph.js",
+    "bin": {
+        "ralph": "bin/ralph.js"
+    },
+    "scripts": {
+        "start": "bun ralph.ts",
+        "build": "bun build ralph.ts --outfile bin/ralph --compile",
+        "test": "bun test ./tests/ralph.test.ts",
+        "install-local": "bun link"
+    },
+    "files": [
+        "bin/ralph.js",
+        "ralph.ts",
+        "README.md",
+        "LICENSE",
+        "install.sh",
+        "install.ps1",
+        "uninstall.sh",
+        "uninstall.ps1"
+    ],
+    "keywords": [
+        "opencode",
+        "ai",
+        "ralph-wiggum",
+        "iterative-development",
+        "automation",
+        "coding-assistant",
+        "llm",
+        "self-correcting",
+        "autonomous",
+        "developer-tools",
+        "cli",
+        "bun",
+        "typescript",
+        "sdk"
+    ],
+    "author": "Victorhsb",
+    "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/victorhsb/open-ralph-wiggum.git"
+    },
+    "bugs": {
+        "url": "https://github.com/victorhsb/open-ralph-wiggum/issues"
+    },
+    "homepage": "https://github.com/victorhsb/open-ralph-wiggum#readme",
+    "dependencies": {
+        "@opencode-ai/sdk": "^0.x"
+    },
+    "devDependencies": {
+        "@types/bun": "^1.3.5"
+    }
 }
