fix: stabilize SDK loop tests and restore context module

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "scripts": {
         "start": "bun ralph.ts",
         "build": "bun build ralph.ts --target bun --outfile bin/ralph.js && bun build ralph.ts --outfile bin/ralph --compile",
-        "test": "bun test ./tests/ralph.test.ts",
+        "test": "bun test",
+        "test:smoke": "bun test ./tests/ralph.test.ts",
         "install-local": "bun link"
     },
     "files": [
