refactor: migrate CLI to Commander.js with subcommands
Replace custom argument parser with Commander.js:
- Convert flag commands to subcommands (status, task, context, suggestion)
- Add short flags: -p -f -m -a -t
- Reduce CLI code by ~67%
- Update tests for new syntax

Breaking: Use subcommand syntax, -p flag for prompt

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "homepage": "https://github.com/victorhsb/open-ralph-wiggum#readme",
     "dependencies": {
         "@opencode-ai/sdk": "^0.15.0",
+        "commander": "^14.0.3",
         "zod": "^4.3.6"
     },
     "devDependencies": {
